@@ -57,8 +57,16 @@ static void
 usage ()
 {
     fprintf(stderr,
-       "usage: %s [-c config] [-vV] command [options]\n",
+       "usage: %s [-c config] [-vVfh] [command [options]]\n",
         progname);
+
+    fprintf(stderr,"  -h        Print this usage information.\n");
+    fprintf(stderr,"  -v        Increase verbosity.\n");
+    fprintf(stderr,"  -V        Print version and exit.\n");
+    fprintf(stderr,"  -f        Force, Assume yes on all questions.\n");
+    fprintf(stderr,"  -c <cfg>  Use alternative conf.xml.\n");
+
+    fprintf(stderr,"commands\n");
 
     fprintf(stderr,"  login\n");
     fprintf(stderr,"  logout\n");
@@ -300,7 +308,7 @@ cmd_remove (int argc, char *argv[])
 }
 
 static int
-cmd_purge (int argc, char *argv[])
+cmd_purge (int argc, char *argv[], int force)
 {
     int result;
     int final_result = 0;
@@ -343,15 +351,16 @@ cmd_purge (int argc, char *argv[])
         return -1;
     }
 
-    printf("Are you sure you want to remove ALL keys from repository %s ? (YES/NO) ", repository);
-    fresult = fgets(confirm, sizeof(confirm) - 1, stdin);
-    if (fresult == NULL || strncasecmp(confirm, "yes", 3) != 0) {
-        printf("\nPurge cancelled.\n");
-        libhsm_key_list_free(keys, key_count);
-        return -1;
-    } else {
-        printf("\nStarting purge...\n");
+    if (!force) {
+        printf("Are you sure you want to remove ALL keys from repository %s ? (YES/NO) ", repository);
+        fresult = fgets(confirm, sizeof(confirm) - 1, stdin);
+        if (fresult == NULL || strncasecmp(confirm, "yes", 3) != 0) {
+            printf("\npurge cancelled.\n");
+            libhsm_key_list_free(keys, key_count);
+            return -1;
+        }
     }
+    printf("\nStarting purge...\n");
 
     for (i = 0; i < key_count; i++) {
         libhsm_key_info_t *key_info;
@@ -559,13 +568,17 @@ main (int argc, char *argv[])
     char *config = NULL;
 
     int ch;
+    int force = 0;
     progname = argv[0];
 
-    while ((ch = getopt(argc, argv, "c:vVh")) != -1) {
+    while ((ch = getopt(argc, argv, "c:vVhf")) != -1) {
         switch (ch) {
         case 'c':
             config = strdup(optarg);
             break;
+	case 'f':
+	    force = 1;
+	    break;
         case 'v':
             verbose++;
             break;
@@ -628,7 +641,7 @@ main (int argc, char *argv[])
     } else if (!strcasecmp(argv[0], "purge")) {
         argc --;
         argv ++;
-        result = cmd_purge(argc, argv);
+        result = cmd_purge(argc, argv, force);
     } else if (!strcasecmp(argv[0], "dnskey")) {
         argc --;
         argv ++;
